Corrected video on mobile playback issue. Requires muted attribute

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,32 @@
 
 /*---------------------------------------*/
 
+.video-container {
+    width: 100%;
+    max-height: 1300px;
+    height: 480px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -120
+}
+
+video#bgvideo {
+    position: relative;
+    top: 19%;
+    left: 50%;
+    min-widtH: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(../img/video_screen.jpg) no-repeat;
+    background-size: cover;
+}
+
 * {
     margin: 0;
     padding: 0;
